Tue Jun 12 21:35:00 CEST 2012
	Adding 451 status code. -CG

Thu May 31 13:33:45 CEST 2012
	Releasing 0.9.20. -CG

Tue May 29 13:55:03 CEST 2012
	Fixed some testcase build issues with disabled post processor. -CG

Tue May 29 13:45:15 CEST 2012
	Fixing bug where MHD failed to call connection termination callback
	if a connection either was closed due to read errors or if MHD
	was terminated with certain threading models.  Added new
	termination code MHD_REQUEST_TERMINATED_READ_ERROR for the
	read-termination cause. -CG

Thu Mar 15 23:47:53 CET 2012
	Eliminating code clone in tls connection read/write handlers. -CG

Fri Mar  2 23:44:56 CET 2012
	Making sure that MHD_get_connection_values iterates over the
	headers in the order in which they were received. -CG

Wed Feb  1 09:39:12 CET 2012
	Fixed compilation problem on MinGW. -BS

Tue Jan 31 17:50:24 CET 2012
	Releasing 0.9.19. -CG

Mon Jan 30 20:02:34 CET 2012
	Fixed handling of garbage prior to first multipart boundary
	(#2126). -woof

Fri Jan 27 11:00:43 CET 2012
	Fixed postprocessor failure for applications that enclosed boundary
	in quotes (#2120). -woof

Tue Jan 24 16:07:53 CET 2012
	Added configure check for sin_len in 'struct sockaddr' and adding
	code to initialize this field if it exists now. -CG

Mon Jan 23 14:02:26 CET 2012
	Fixed double-free if specified cipher was not valid (during
	MHD_daemon_start).  Releasing 0.9.18. -CG

Thu Jan 19 22:11:12 CET 2012
	Switch to non-blocking sockets for all systems but Cygwin
	(we already used non-blocking sockets for GNU/Linux); also
	use non-blocking sockets on Cygwin for HTTPS as this is
	required to avoid DoS-by-partial-record via gnutls.  On
	Cygwin, #1824 implies that we need to use blocking sockets
	for HTTP on Cygwin for now. -CG

Thu Jan 19 17:46:05 CET 2012
	Fixing use of uninitialized 'earliest_deadline' variable in
	MHD_get_timeout which can lead to returning an incorrect
	(too early) timeout (#2085). -tclaveirole

Thu Jan 19 13:31:27 CET 2012